--- a/prototypes/scss/screen.scss
+++ b/prototypes/scss/screen.scss
@@ -32,6 +32,7 @@
 @import "./paragraphs/lto";
 @import "./paragraphs/amenities";
 @import "./paragraphs/testimonials";
+@import "./paragraphs/camp_menu";
 
 @import "./modules/gallery";
 @import "./modules/membership";
