--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -23,7 +23,7 @@
         <div class="compain-progress--description">
             <div class="description-item"
                  data-ng-show="!myProgressC.isGoalAchieved()">
-                <p>You need <b>{{ '{{ myProgressC.visitsLeft() }}' }} more visits</b> <br/> to achive your goal.</p>
+                <p>You need <b>{{ '{{ myProgressC.visitsLeft() }}' }} more visits</b> <br/> to achieve your goal.</p>
             </div>
             <div class="description-item"
                  data-ng-show="myProgressC.isGoalAchieved()">
