--- a/themes/openy_themes/openy_rose/scss/modules/_menu.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_menu.scss
@@ -310,9 +310,33 @@
 
     > li {
 
-      &:nth-child(3n + 1) {
+      &:nth-child(4n + 1) {
         clear: both;
       }
+    }
+  }
+}
+
+@include breakpoint($screen-md-max) {
+  .row-level-2 {
+    > li {
+      &:nth-child(6n + 1) {
+        clear: both;
+      }
+    }
+    &.menu-columns-1 {
+      left: auto;
+    }
+    &.menu-columns-2 {
+      left: auto;
+    }
+    &.menu-columns-3 {
+      left: auto;
+    }
+    &.menu-columns-4,
+    &.menu-columns-5,
+    &.menu-columns-6 {
+      left: 10%;
     }
   }
 }
