--- a/themes/openy_themes/openy_rose/templates/menu/menu--main.html.twig
+++ b/themes/openy_themes/openy_rose/templates/menu/menu--main.html.twig
@@ -65,13 +65,16 @@
 {% macro menu_links_level_2(items, attributes, menu_level) %}
   {% import _self as menus %}
   {% if items %}
-    {% set attributes = attributes.addClass(['row-level-2', 'row']) %}
-    <ul class="nav dropdown-menu row-level-2 row">
+    {% set col_size = items|length %}
+    {% set menu_size_class = 'menu-columns-' ~ col_size %}
+    {% set menu_size_class = col_size > 5 ? 'menu-columns-6' : menu_size_class %}
+    <ul class="nav dropdown-menu row-level-2 row {{ menu_size_class }}">
     {% for item in items %}
-      {% set ia = item.attributes %}
-      {% set ia = ia.addClass(['nav-level-3', 'col-md-4', 'col-lg-2', 'menu-item-' ~ item.title|clean_class]) %}
+      {% set lg = 12 // col_size %}
+      {% set lg = lg < 2 ? 2 : lg %}
+      {% set md = lg < 4 ? 3 : lg %}
+      {% set ia = item.attributes.addClass(['nav-level-3', 'col-md-' ~ md, 'col-lg-' ~ lg, 'menu-item-' ~ item.title|clean_class]) %}
       <li{{ ia }}>
-
         {% if item.below %}
           <a href="{{ item.url }}">
             <div class="section-icon"></div>
