--- a/docroot/themes/custom/ymca/sass/ysr_2017/_blocks.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_blocks.scss
@@ -273,6 +273,14 @@
         font-style: normal;
         color: $green-dark;
       }
+
+      .tip-title {
+        color: $green-dark;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
 
     .description {
