[YMCA-1556] Fix links on Introduction tab for logged-in members; add mobile accordion handling to Angular JS Router state handling.

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
@@ -45,11 +45,11 @@
             <p>
               {{ 'Each visit is one step closer to meeting your goal &mdash; and getting 4 guest passes.'|t }}
               <a href="javascript:void(0)"
-                 data-ng-click="retentionC.tabSelectorClick('tab_3')">{{ 'See your goal & progress'|t }}</a>.
+                 data-ng-click="retentionC.tabSelectorClick('tab_3', true)">{{ 'See your goal & progress'|t }}</a>.
             </p>
           </div>
           <a href="javascript:void(0)"
-             data-ng-click="retentionC.tabSelectorClick('tab_3')">
+             data-ng-click="retentionC.tabSelectorClick('tab_3', true)">
             <figure class="img">
               <img alt="img" src="{{ base_path ~ directory }}/prototypes/ysr_2017/img/tabs/icon-guestpasses.png"/>
             </figure>
@@ -64,11 +64,11 @@
             <p>
               {{ 'Come back to the site daily, March 8-21 for inspiration to integrate wellness in your life. For each tip that you check out, you’ll be entered in a drawing for Y Bucks.'|t }}
               <a href="javascript:void(0)"
-                 data-ng-click="retentionC.tabSelectorClick('tab_2')">{{ 'Find tips'|t }}</a>.
+                 data-ng-click="retentionC.tabSelectorClick('tab_2', true)">{{ 'Find tips'|t }}</a>.
             </p>
           </div>
           <a href="javascript:void(0)"
-             data-ng-click="retentionC.tabSelectorClick('tab_2')">
+             data-ng-click="retentionC.tabSelectorClick('tab_2', true)">
             <figure class="img">
               <img alt="img" src="{{ base_path ~ directory }}/prototypes/ysr_2017/img/tabs/icon-ybucks.png"/>
             </figure>
