Add sidebar region to openy_rose theme

--- a/themes/openy_themes/openy_rose/templates/page/page.html.twig
+++ b/themes/openy_themes/openy_rose/templates/page/page.html.twig
@@ -77,10 +77,10 @@
     </div>
 
     <div class="col-xs-12 page-head__top-menu">
-      {{ page.secondary_menu }}
+      {{ page.sidebar.useraccountmenu }}
     </div>
     <div class="col-xs-12 page-head__main-menu nav-home">
-      {{ page.primary_menu }}
+      {{ page.sidebar.mainnavigation }}
     </div>
   </div>
 
