Making menu drop down full width

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -937,17 +937,11 @@ body {
   .row-level-2 > li:nth-child(6n + 1) {
     clear: both;
   }
-  .row-level-2.menu-columns-1 {
-    left: auto;
-  }
-  .row-level-2.menu-columns-2 {
-    left: auto;
-  }
-  .row-level-2.menu-columns-3 {
-    left: auto;
-  }
-  .row-level-2.menu-columns-4, .row-level-2.menu-columns-5, .row-level-2.menu-columns-6 {
-    left: 10%;
+}
+@media (min-width: 62em) {
+  .row-level-2 {
+    left: 0;
+    right: 0;
   }
 }
 .section-icon {
