[YMCA-1517] Fixing inactive link to the previous daily tip.

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -91,7 +91,7 @@
 
                                         <div class="description"
                                              data-ng-click="myProgressC.todayInsight(date.timestamp)">
-                                            <p>{{ '{{myProgressC.bonusTitle(date) }}' }}</p>
+                                            <p class="tip-title">{{ '{{myProgressC.bonusTitle(date) }}' }}</p>
                                         </div>
                                     </ng-show>
                                 </ng-show>
