[YMCA-1566] remove text for visit; circle always filled (class compain-progress-block--checked for visited and non visited day)

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -67,7 +67,7 @@
                                 <span class="week-day">{{ '{{date.weekday}}' }}</span>
                             </div>
 
-                            <div class="status">{{ '{{myProgressC.checkInStatus(date) }}' }}</div>
+                            <div class="status"></div>
                         </div>
                     </div>
                     <div class="compain-progress-block--footer">
