--- a/themes/openy_themes/openy_rose/templates/node/node--alert--node-alert-header.html.twig
+++ b/themes/openy_themes/openy_rose/templates/node/node--alert--node-alert-header.html.twig
@@ -96,11 +96,13 @@
           {{ content.field_alert_description }}
         </div>
       </div>
-      <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
-        <div class="field-alert-link">
-          <a href="{{ link_url }}" style="color: {{ text_color }}; border-color: {{ text_color}}">{{ link_title }}</a>
+      {% if link_title %}
+        <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
+          <div class="field-alert-link">
+            <a href="{{ link_url }}" style="color: {{ text_color }}; border-color: {{ text_color}}">{{ link_title }}</a>
+          </div>
         </div>
-      </div>
+      {% endif %}
       <a href="#" class="site-alert__dismiss"><i class="fa fa-times"></i></a>
     </div>
   </div>
