--- a/themes/openy_themes/openy_rose/scss/modules/_alerts.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_alerts.scss
@@ -35,9 +35,7 @@ $module: 'site-alert';
       padding: 12px 16px;
       text-align: center;
       &:hover {
-        background-color: $white;
-        color: $dark-blue !important;
-        text-decoration: none;
+        text-decoration: underline;
       }
     }
   }
