Add message: Visits are updated nightly

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -24,6 +24,7 @@
             <div class="description-item"
                  data-ng-show="!myProgressC.isGoalAchieved()">
                 <p>You need <b>{{ '{{ myProgressC.visitsLeft() }}' }} more visits</b> <br/> to achieve your goal.</p>
+                <p><b>Visits are updated nightly.</b></p>
             </div>
             <div class="description-item"
                  data-ng-show="myProgressC.isGoalAchieved()">
