[YMCA-1474] independent header tweeks

--- a/docroot/themes/custom/ymca/templates/html/html--header.html.html.twig
+++ b/docroot/themes/custom/ymca/templates/html/html--header.html.html.twig
@@ -25,6 +25,11 @@
  * @ingroup themeable
  */
 #}
+{%
+  set classes = [
+    'independent-header'
+  ]
+%}
 <!DOCTYPE html>
 <html{{ html_attributes }}>
   <head>
@@ -37,7 +42,7 @@
       {{ style }}
     {% endfor %}
   </head>
-  <body{{ attributes }}>
+  <body{{ attributes.addClass(classes) }}>
     {#
       Keyboard navigation/accessibility link to main content section in
       page.html.twig.
