[YGH-379] Fix mobile styles for all testimonials paragraph

--- a/modules/testimonials.scss
+++ b/modules/testimonials.scss
@@ -61,6 +61,9 @@
 
       .browse-classes-btn {
         display: block;
+        @include breakpoint(tablet) {
+          max-width: 360px;
+        }
       }
     }
 
