--- a/themes/openy_themes/openy_rose/templates/node/node--blog--teaser.html.twig
+++ b/themes/openy_themes/openy_rose/templates/node/node--blog--teaser.html.twig
@@ -77,16 +77,12 @@
   node.isSticky() ? 'node--sticky',
   not node.isPublished() ? 'node--unpublished',
   view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
-  node.field_blog_style.value ? 'blog-' ~ node.field_blog_style.value|clean_class,
+  node.field_blog_style.value ? 'blog-' ~ node.field_blog_style.value|clean_class : 'blog-story',
 ] %}
-
-{% if (node.field_blog_style.value == 'color') %}
-  {% set color = 'color: #' ~ content.field_blog_text_color['#items'].entity.field_color.value %}
-  {% set bg_color = 'background-color: #' ~ content.field_blog_color['#items'].entity.field_color.value %}
-{% else %}
-  {% set color = '' %}
-  {% set bg_color = '' %}
-{% endif %}
+{% set category_default = node.bundle|clean_class|capitalize %}
+{% set category = content.field_blog_category.0 ? content.field_blog_category.0 : category_default|t %}
+{% set color = 'color: #' ~ content.field_blog_text_color['#items'].entity.field_color.value %}
+{% set bg_color = 'background-color: #' ~ content.field_blog_color['#items'].entity.field_color.value %}
 
 <article{{ attributes.addClass(classes) }}>
   <div class="inner-wrapper" style="{{ color }}; {{ bg_color }};">
@@ -96,7 +92,7 @@
   </div>
     {% endif %}
     <div class="blog-heading">
-      <h4 style="{{ color }};">{{ content.field_blog_category.0 }}</h4>
+      <h4 style="{{ color }};">{{ category }}</h4>
       {% if ( node.field_blog_style.value == "story" ) %}
         <div class="story-card">
           <div class="quote">
