--- a/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_misc.scss
@@ -21,7 +21,7 @@ html, body {
 
   .main--content {
     @include rem(padding, 0 0 60px 0);
-    @include background-image(linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(244,244,244,0.8) 100%));
+    @include background-image(linear-gradient(top, rgba(255, 255, 255, 1) 0%, rgba(244, 244, 244, 0.8) 100%));
     background-position: 50% 100%;
     background-repeat: no-repeat;
     background-size: 100% 60px;
@@ -74,7 +74,6 @@ html, body {
     }
   }
 
-
   .page-footer {
     &.footer-themes-b {
       .richtext {
@@ -87,12 +86,13 @@ html, body {
     margin: 0;
   }
 
+  .form-select,
   .form-text,
   .form-email {
     @include rem(font-size, 14px);
     @include rem(line-height, 20px);
     @include rem(padding, 14px);
-    @include transition(border-color ease-in-out .15s,box-shadow ease-in-out .15s);
+    @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
     display: block;
     width: 100%;
     color: $grey7;
@@ -192,5 +192,197 @@ html, body {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+}
+
+.theme-ymca--2017-compain-winners {
+  height: 100%;
+  position: relative;
+
+  .container-winners {
+    height: 100%;
+    background: url('../prototypes/ysr_2017/img/bg-page-winner.jpg') no-repeat;
+    background-size: cover;
+    @include rem(max-height, 522px);
+  }
+
+  .compain-winners {
+    @include rem(padding, 20px);
+    width: 100%;
+    @include rem(max-width, 740px);
+    @include rem(padding-top, 39px);
+    @include rem(padding-bottom, 45px);
+    margin: 0 auto;
+
+    .compain-header {
+      background: none;
+      height: auto;
+      padding-bottom: 0;
+
+      &--content {
+        text-align: center;
+        .content {
+          text-align: center;
+          @include rem(margin-top, 31px);
+        }
+        .title {
+          padding-bottom: 2px;
+        }
+        .logo {
+          display: block;
+          margin: 0 auto;
+          max-width: 102px;
+        }
+      }
+    }
+
+    .container {
+      padding: 0;
+    }
+  }
+
+  .compain-form-winners {
+    @include rem(padding, 20px);
+    @include breakpoint($tablet) {
+      @include rem(padding, 30px);
+    }
+    @include rem(max-width, 453px);
+    margin: 0 auto;
+
+    @include breakpoint($desktop-small) {
+      @include rem(padding, 27px);
+    }
+
+    .btn {
+      @include rem(line-height, 26px);
+      display: block;
+      width: 100%;
+    }
+
+    .form-item {
+      @include rem(margin, 0 0 20px 0);
+
+      @include breakpoint($tablet) {
+        margin-bottom: 0;
+      }
+    }
+
+    .form-select {
+      height: 50px;
+    }
+
+  }
+
+  .img.center {
+    text-align: center;
+  }
+
+  .compain-info-blocks .content-wrapper {
+    overflow: visible;
+  }
+}
+
+.winner {
+  @include cachet-bold();
+  text-align: center;
+  text-transform: uppercase;
+  .bucks-header {
+    display: table;
+    margin: 0 auto;
+    font-weight: bold;
+    border-bottom: 1px solid $grey2;
+    padding-bottom: 4px;
+    @include rem(margin-bottom, 16px);
+    min-width: 308px;
+    .col-sm-4 & {
+      @include rem(padding-left, 40px);
+      @include breakpoint(max-width 900px) {
+        min-width: initial;
+        padding-left: 0;
+        .cert-description {
+          @include rem(padding-left, 10px);
+          @include rem(font-size, 18px);
+        }
+      }
+    }
+  }
+
+
+  .sum {
+    display: table-cell;
+    color: $green-medium;
+    letter-spacing: -6px;
+    @include rem(font-size, 60px);
+    .currency {
+      font-size: 60%;
+    }
+  }
+  .cert-description {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+    @include rem(font-size, 20px);
+    @include rem(line-height, 25px);
+
+  }
+  .winner-name {
+    color: $green-dark;
+    @include rem(font-size, 30px);
+    font-weight: bold;
+    margin-bottom: 2px;
+    .col-sm-2 &,
+    .col-sm-4 & {
+      color: $green-medium;
+    }
+    .col-sm-2 & {
+      @include rem(margin-top, 6px);
+    }
+  }
+  .winner-id {
+    color: $grey5;
+    @include rem(font-size, 13px);
+    .col-sm-2 & {
+      @include rem(margin-bottom, 57px);
+    }
+  }
+  .col-sm-12 & {
+    @include rem(font-size, 21px);
+  }
+
+}
+
+.container.bucks-25 {
+  @include breakpoint($tablet) {
+    @include rem(margin-top, -75px);
+    padding: 0;
+  }
+  img {
+    max-width: 60px;
+  }
+}
+
+.bucks-5 {
+  .container {
+    border-bottom: 1px solid $grey2;
+    @include rem(margin, 0 48px 48px);
+    @include rem(padding-top, 88px);
+    @include rem(padding-left, 80px);
+    @include breakpoint($tablet) {
+      @include rem(padding-left, 188px);
+    }
+    .winner {
+      margin-bottom: 0;
+    }
+    .bucks-header {
+      border: 0 none;
+      @include rem(margin-bottom, 6px);
+    }
+  }
+  .winner-name {
+    @include rem(font-size, 20px);
+  }
+  .row {
+    margin-right: -100px;
+    margin-left: -100px;
   }
 }
