--- a/openy_prgf_camp_menu/templates/camp-menu.html.twig
+++ b/openy_prgf_camp_menu/templates/camp-menu.html.twig
@@ -22,11 +22,15 @@
 #}
 
 <div class="camp-menu-wrapper">
-  <ul class="camp-menu">
-    {% for link in links %}
-      <li class="camp-menu__item">
-        {{ link }}
-      </li>
-    {% endfor %}
-  </ul>
+  <div class="container">
+    <div class="row">
+      <ul class="camp-menu">
+        {% for link in links %}
+          <li class="camp-menu__item">
+            {{ link }}
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
 </div>
